# clickless

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  dsl.json  dump.sql  init.sql  pyproject.toml  test.http
api/: main.py
docs/: architecture.md  reliability.md  scalability.md  worker-and-scheduler.md
engine/: tasks.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  types.ts  utils.ts
frontend/src/components/: ConnectorIcon.tsx  JsonEditor.tsx  Layout.tsx  Modal.tsx  RunWorkflowDialog.tsx  SchemaForm.tsx  SendEventDialog.tsx  StatusBadge.tsx  StepTimeline.tsx  WorkflowGraph.tsx
frontend/src/hooks/: useConnections.ts  useConnectors.ts  usePolling.ts
frontend/src/pages/: InstancesPage.tsx  (+6 more)
infrastructure/: init.sql
infrastructure/postgres/: init.sql
relay/: main.py
shared/: celery_app.py  db.py  loggin_config.py
src/api/: Readme.md  dependencies.py  exception_handlers.py  health.py  main.py  repository.py  schemas.py  service.py
src/execution/: Readme.md
src/relay/: main.py  service.py
src/shared/: base_repository.py  base_unit_of_work.py  celery_app.py  constants.py  db.py  event_types.py  logging_config.py  metrics.py  redis_client.py
src/worker/: models.py  registry.py  service.py  task.py
tests/e2e/: test_e2e.py
tests/integration/: test_api.py
tests/unit/: conftest.py  test_api_service.py  test_connector_registry.py  test_domain_models.py  test_event_types.py  test_exceptions.py  test_template.py
worker/: action_handlers.py  tasks.py
(+78 files in other folders)
